MonthlySummaryのリファクタリング：月次経費の集計処理を最適化し、1回のループで合計金額とカテゴリごとの集計を行うように変更しました。また、空の経費リストに対する処理を改善し、リストの防御的コピーを使用して呼び出し元の変更から保護しました。これにより、コードのパフォーマンスと可読性が向上しました。